# shein_poc_cdc

./: README.md  pyproject.toml
poc_cdc/api_consumer/: consumidor.py  extrator.py  run.py
poc_cdc/cache/: redis_cache.py
poc_cdc/config/: config.py  production.env
poc_cdc/database/: manager.py
poc_cdc/database/models/: price_history.py  product.py
poc_cdc/docker-compose/: docker-compose.yml
poc_cdc/kafka/: consumer.py  producer.py
poc_cdc/schemas/: price_history.py  product.py
